@@ -331,7 +331,15 @@ func (o *ElasticSearchOutput) queueFull(buffer []byte, count int64) bool {
 }
 
 func (o *ElasticSearchOutput) SendRecord(buffer []byte) (err error) {
-	return o.bulkIndexer.Index(buffer)
+	var retry bool
+	err, retry = o.bulkIndexer.Index(buffer)
+	if err != nil {
+		if retry {
+			return err
+		}
+		o.or.LogError(fmt.Errorf("can't index: %s", err))
+	}
+	return nil
 }
 
 // Satisfies the `pipeline.ReportingPlugin` interface to provide plugin state
@@ -354,7 +362,7 @@ func (o *ElasticSearchOutput) ReportMsg(msg *message.Message) error {
 // A BulkIndexer is used to index documents in ElasticSearch
 type BulkIndexer interface {
 	// Index documents
-	Index(body []byte) error
+	Index(body []byte) (err error, retry bool)
 	// Check if a flush is needed
 	CheckFlush(count int, length int) bool
 }
@@ -409,7 +417,7 @@ func (h *HttpBulkIndexer) CheckFlush(count int, length int) bool {
 	return false
 }
 
-func (h *HttpBulkIndexer) Index(body []byte) error {
+func (h *HttpBulkIndexer) Index(body []byte) (err error, retry bool) {
 	var response_body []byte
 	var response_body_json map[string]interface{}
 
@@ -418,7 +426,7 @@ func (h *HttpBulkIndexer) Index(body []byte) error {
 	// Creating ElasticSearch Bulk HTTP request
 	request, err := http.NewRequest("POST", url, bytes.NewReader(body))
 	if err != nil {
-		return fmt.Errorf("Can't create bulk request: %s", err.Error())
+		return fmt.Errorf("Can't create bulk request: %s", err.Error()), true
 	}
 	request.Header.Add("Accept", "application/json")
 	if h.username != "" && h.password != "" {
@@ -433,31 +441,31 @@ func (h *HttpBulkIndexer) Index(body []byte) error {
 			(strings.Contains(err.Error(), "use of closed network connection")) {
 
 			return fmt.Errorf("HTTP request was interrupted after timeout. It lasted %s",
-				request_time.String())
+				request_time.String()), true
 		} else {
-			return fmt.Errorf("HTTP request failed: %s", err.Error())
+			return fmt.Errorf("HTTP request failed: %s", err.Error()), true
 		}
 	}
 	if response != nil {
 		defer response.Body.Close()
 		if response.StatusCode > 304 {
-			return fmt.Errorf("HTTP response error status: %s", response.Status)
+			return fmt.Errorf("HTTP response error status: %s", response.Status), false
 		}
 		if response_body, err = ioutil.ReadAll(response.Body); err != nil {
-			return fmt.Errorf("Can't read HTTP response body: %s", err.Error())
+			return fmt.Errorf("Can't read HTTP response body: %s", err.Error()), true
 		}
 		err = json.Unmarshal(response_body, &response_body_json)
 		if err != nil {
 			return fmt.Errorf("HTTP response didn't contain valid JSON. Body: %s",
-				string(response_body))
+				string(response_body)), true
 		}
 		json_errors, ok := response_body_json["errors"].(bool)
 		if ok && json_errors {
 			return fmt.Errorf("ElasticSearch server reported error within JSON: %s",
-				string(response_body))
+				string(response_body)), false
 		}
 	}
-	return nil
+	return nil, false
 }
 
 // A UDPBulkIndexer uses the Bulk UDP Api of ElasticSearch
@@ -488,26 +496,25 @@ func (u *UDPBulkIndexer) CheckFlush(count int, length int) bool {
 	return false
 }
 
-func (u *UDPBulkIndexer) Index(body []byte) error {
-	var err error
+func (u *UDPBulkIndexer) Index(body []byte) (err error, retry bool) {
 	if u.address == nil {
 		if u.address, err = net.ResolveUDPAddr("udp", u.Domain); err != nil {
-			return fmt.Errorf("Error resolving UDP address [%s]: %s", u.Domain, err)
+			return fmt.Errorf("Error resolving UDP address [%s]: %s", u.Domain, err), true
 		}
 	}
 	if u.client == nil {
 		if u.client, err = net.DialUDP("udp", nil, u.address); err != nil {
-			return fmt.Errorf("Error creating UDP client: %s", err)
+			return fmt.Errorf("Error creating UDP client: %s", err), true
 		}
 	}
 	if u.address != nil {
 		if _, err = u.client.Write(body[:]); err != nil {
-			return fmt.Errorf("Error writing data to UDP server: %s", err)
+			return fmt.Errorf("Error writing data to UDP server: %s", err), true
 		}
 	} else {
-		return fmt.Errorf("Error writing data to UDP server, address not found")
+		return fmt.Errorf("Error writing data to UDP server, address not found"), true
 	}
-	return nil
+	return nil, false
 }
 
 func init() {
